fixed header spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,10 @@
 
 .page-body {
     position: relative;
-    top: 76px;
+    top: 59px;
+    @media (min-width: 576px) { 
+        top: 76px;
+    }
 }
 
 .shopNowButton {
